2024-09-12T01:02:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10822188984 # 416
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-12
* notice: last 14d: unq all: 5 1720
* notice: prev accum: outdated-unq outdated-all / unq all: 2209 223636 / 2227 225431
* notice: next accum: outdated-unq outdated-all / unq all: 2210 223764 / 2229 225560
* notice: prev exec diff / last date diff / accum: unq all: +2 +129 -1 -76 / +2 +129 -0 -0 / 2 129
* notice: removed / changed dates: [2024-08-28] / [2024-08-29 2024-09-11]

2024-09-11T01:02:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10803076938 # 415
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-11
* notice: last 14d: unq all: 4 1720
* notice: prev accum: outdated-unq outdated-all / unq all: 2208 223508 / 2226 225303
* notice: next accum: outdated-unq outdated-all / unq all: 2209 223636 / 2227 225431
* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -75 / +1 +128 -0 -0 / 1 128
* notice: removed / changed dates: [2024-08-27] / [2024-08-28 2024-09-10]

2024-09-10T01:02:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10783848530 # 414
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-10
* notice: last 14d: unq all: 4 1720
* notice: prev accum: outdated-unq outdated-all / unq all: 2207 223380 / 2225 225174
* notice: next accum: outdated-unq outdated-all / unq all: 2208 223508 / 2226 225303
* notice: prev exec diff / last date diff / accum: unq all: +1 +129 -0 -75 / +1 +127 -0 -0 / 1 127
* notice: removed / changed dates: [2024-08-26] / [2024-08-27 2024-09-08 2024-09-09]

2024-09-09T01:04:12Z: