@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-09-12T01:02:28Z",
-  "count_outdated" : 223764,
-  "uniques_outdated" : 2210,
-  "count" : 225560,
-  "uniques" : 2229,
+  "timestamp" : "2024-09-13T01:02:32Z",
+  "count_outdated" : 223893,
+  "uniques_outdated" : 2212,
+  "count" : 225688,
+  "uniques" : 2230,
   "clones" : [
     {
-      "timestamp": "2024-08-29T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 53, 129 ],
-      "count_decinc": [ 76, 129 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2024-08-30T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
+      "count": 53,
+      "count_minmax": [ 53, 128 ],
+      "count_decinc": [ 75, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -130,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-09-12T00:00:00Z",
+      "count": 128,
+      "count_minmax": [ 128, 128 ],
+      "count_decinc": [ 0, 128 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
