@@ -3,13 +3,8 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2024-08-29T00:00:00Z",
-      "count": 53,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-08-30T00:00:00Z",
-      "count": 128,
+      "count": 53,
       "uniques": 1
     },
     {
@@ -71,6 +66,11 @@
       "timestamp": "2024-09-11T00:00:00Z",
       "count": 129,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-12T00:00:00Z",
+      "count": 128,
+      "uniques": 1
     }
   ]
 }
